--- a/app/src/main/res/layout-land/fragment_speaker_details.xml
+++ b/app/src/main/res/layout-land/fragment_speaker_details.xml
@@ -132,6 +132,17 @@
                     android:layout_marginRight="20dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="16dp"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/sessionList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="16dp"/>
             </LinearLayout>
         </ScrollView>
 
