--- a/app/src/main/res/layout/item_session.xml
+++ b/app/src/main/res/layout/item_session.xml
@@ -51,11 +51,11 @@
                 android:layout_marginStart="16dp"
                 app:layout_constraintLeft_toRightOf="@+id/imageSession"
                 android:layout_marginLeft="16dp"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginRight="16dp"
                 tools:text="Awesome Session"
-                android:layout_marginTop="4dp"/>
+                android:layout_marginTop="4dp"
+                app:layout_constraintRight_toLeftOf="@+id/buttonAdd"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"/>
 
             <TextView
                 android:id="@+id/textSessionSub"
@@ -64,12 +64,25 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/textSessionTitle"
                 app:layout_constraintLeft_toLeftOf="@+id/textSessionTitle"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginRight="16dp"
                 tools:text="Awesome Speaker"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="16dp"/>
+                android:layout_marginBottom="16dp"
+                app:layout_constraintRight_toLeftOf="@+id/buttonAdd"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"/>
+
+            <ImageButton
+                android:id="@+id/buttonAdd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:background="@android:color/transparent"
+                app:src="@drawable/ic_add"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textSessionTitle"
+                android:layout_marginRight="16dp"
+                tools:ignore="ContentDescription"/>
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
