--- a/app/src/main/res/layout/item_session.xml
+++ b/app/src/main/res/layout/item_session.xml
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:background="@android:color/transparent"
-                app:src="@drawable/ic_add"
+                android:src="@drawable/ic_add"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textSessionTitle"
