--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -16,11 +16,11 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             app:roundCorners="true"
-            app:srcCompat="@android:drawable/sym_def_app_icon"
-            app:layout_constraintLeft_toLeftOf="@+id/fragmentUser"
+            app:srcCompat="@mipmap/ic_launcher"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            app:layout_constraintTop_toTopOf="@+id/fragmentUser"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="16dp" />
 
         <TextView
@@ -30,7 +30,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textStyle="bold"
             tools:text="Android Studio"
-            app:layout_constraintLeft_toLeftOf="@+id/fragmentUser"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             app:layout_constraintBottom_toTopOf="@+id/textUserMail" />
@@ -40,21 +40,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="android.studio@android.com"
-            app:layout_constraintLeft_toLeftOf="@+id/fragmentUser"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/fragmentUser"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp" />
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/buttonSignIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintRight_toRightOf="@+id/fragmentUser"
+            app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/fragmentUser"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp" />
+
+        <Button
+            android:text="Logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonSignOut"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
