--- a/app/src/main/res/layout/fragment_session_details.xml
+++ b/app/src/main/res/layout/fragment_session_details.xml
@@ -1,139 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
-    <android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+  <android.support.design.widget.CoordinatorLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:fitsSystemWindows="true"
+      android:saveEnabled="false">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:background="@color/tag_android_dark"
+        android:fitsSystemWindows="true">
+
+      <android.support.design.widget.CollapsingToolbarLayout
+          android:id="@+id/collapsingToolbarLayout"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          app:titleEnabled="false"
+          android:fitsSystemWindows="false"
+          app:statusBarScrim="@android:color/transparent"
+          app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+        <de.devfest.ui.DevFestImageView
+            android:id="@+id/imageTopic"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="?actionBarSize"
+            app:layout_collapseMode="parallax"
+            android:scaleType="fitXY"
+            tools:src="@drawable/ic_android"
+            android:fitsSystemWindows="true" />
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_gravity="bottom"
+            app:navigationIcon="@drawable/ic_arrow_left"
+            app:titleMarginStart="0dp"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:layout_collapseMode="pin"/>
+        <!--<View-->
+        <!--android:id="@+id/statusBarBackground"-->
+        <!--android:background="@color/black_54"-->
+        <!--android:fitsSystemWindows="true"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="24dp" />-->
+      </android.support.design.widget.CollapsingToolbarLayout>
+
+      <android.support.constraint.ConstraintLayout
+          android:id="@+id/containerSessionForeground"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          app:layout_scrollFlags="scroll">
+
+        <TextView
+            android:id="@+id/textSessionTitle"
+            android:textAppearance="@style/TextAppearance.DevFest.Card.Title.Inverse"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="72dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            tools:text="Awesome Session"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="16dp" />
+
+        <TextView
+            android:id="@+id/textSessionSub"
+            android:textAppearance="@style/TextAppearance.DevFest.Card.Subtitle.Inverse"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/textSessionTitle"
+            app:layout_constraintLeft_toLeftOf="@+id/textSessionTitle"
+            tools:text="Awesome Speaker"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintRight_toRightOf="@+id/textSessionTitle"
+            android:layout_marginEnd="8dp" />
+
+      </android.support.constraint.ConstraintLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/containerSessionContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:saveEnabled="false">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:background="@color/tag_android">
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appbar"
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:orientation="vertical">
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:background="@color/tag_android_dark"
-            android:fitsSystemWindows="true">
+            android:layout_height="wrap_content">
 
-            <android.support.design.widget.CollapsingToolbarLayout
-                android:id="@+id/collapsingToolbarLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:titleEnabled="false"
-                android:fitsSystemWindows="false"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+          <ImageView
+              android:id="@+id/imageSessionDesc"
+              android:layout_width="36dp"
+              android:layout_height="36dp"
+              android:scaleType="center"
+              android:layout_marginStart="20dp"
+              app:layout_constraintLeft_toLeftOf="parent"
+              app:layout_constraintTop_toTopOf="parent"
+              android:layout_marginTop="16dp"
+              app:srcCompat="@drawable/ic_description"
+              tools:ignore="ContentDescription" />
 
-                <de.devfest.ui.DevFestImageView
-                    android:id="@+id/imageTopic"
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_marginBottom="?actionBarSize"
-                    app:layout_collapseMode="parallax"
-                    android:scaleType="centerInside"
-                    tools:src="@drawable/ic_android"
-                    android:fitsSystemWindows="true"/>
+          <TextView
+              android:id="@+id/textSessionDesc"
+              tools:text="Awesome talk about very awesome technology with lots of very cool and funny jokes."
+              android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
+              android:lineSpacingMultiplier="1.3"
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              android:layout_marginStart="16dp"
+              app:layout_constraintLeft_toRightOf="@+id/imageSessionDesc"
+              android:layout_marginLeft="16dp"
+              app:layout_constraintTop_toTopOf="parent"
+              android:layout_marginTop="24dp"
+              android:layout_marginEnd="16dp"
+              app:layout_constraintRight_toRightOf="parent"
+              android:layout_marginRight="16dp" />
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?actionBarSize"
-                    android:layout_gravity="bottom"
-                    app:navigationIcon="@drawable/ic_arrow_left"
-                    app:titleMarginStart="0dp"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    app:layout_collapseMode="pin" />
+          <ImageView
+              android:id="@+id/imageSessionLocation"
+              android:src="@drawable/ic_location"
+              android:scaleType="center"
+              android:layout_marginTop="24dp"
+              app:layout_constraintTop_toBottomOf="@+id/textSessionDesc"
+              android:layout_marginStart="20dp"
+              app:layout_constraintLeft_toLeftOf="parent"
+              tools:ignore="ContentDescription"
+              android:layout_width="36dp"
+              android:layout_height="36dp" />
 
-                <!--<View-->
-                    <!--android:id="@+id/statusBarBackground"-->
-                    <!--android:background="@color/black_54"-->
-                    <!--android:fitsSystemWindows="true"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="24dp" />-->
-            </android.support.design.widget.CollapsingToolbarLayout>
-        </android.support.design.widget.AppBarLayout>
+          <TextView
+              android:id="@+id/textLocation"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
+              tools:text="Main Stage"
+              android:layout_marginStart="16dp"
+              app:layout_constraintLeft_toRightOf="@+id/imageSessionLocation"
+              app:layout_constraintTop_toTopOf="@+id/imageSessionLocation"
+              app:layout_constraintBottom_toBottomOf="@+id/imageSessionLocation" />
 
-        <android.support.v4.widget.NestedScrollView
-            android:id="@+id/containerSessionContent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:background="@color/tag_android">
+        </android.support.constraint.ConstraintLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+        <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/speakerList"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="20dp"-->
+        <!--android:layout_marginLeft="20dp"-->
+        <!--android:layout_marginTop="16dp"-->
+        <!--android:layout_marginBottom="16dp"-->
+        <!--android:layout_marginEnd="20dp"-->
+        <!--android:layout_marginRight="20dp"/>-->
 
-                <android.support.constraint.ConstraintLayout
-                    android:id="@+id/constraintLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:id="@+id/imageSessionDesc"
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"
-                        android:scaleType="center"
-                        android:layout_marginStart="20dp"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:layout_marginTop="16dp"
-                        app:srcCompat="@drawable/ic_description"
-                        tools:ignore="ContentDescription"/>
-
-                    <TextView
-                        android:id="@+id/textSessionDesc"
-                        tools:text="Awesome talk about very awesome technology with lots of very cool and funny jokes."
-                        android:lineSpacingMultiplier="1.3"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        app:layout_constraintLeft_toRightOf="@+id/imageSessionDesc"
-                        android:layout_marginLeft="16dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:layout_marginTop="24dp"
-                        android:layout_marginEnd="16dp"
-                        app:layout_constraintRight_toRightOf="parent"
-                        android:layout_marginRight="16dp"/>
-
-                    <ImageView
-                        android:id="@+id/imageSessionLocation"
-                        android:src="@drawable/ic_location"
-                        android:scaleType="center"
-                        android:layout_marginTop="24dp"
-                        app:layout_constraintTop_toBottomOf="@+id/textSessionDesc"
-                        android:layout_marginStart="20dp"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        tools:ignore="ContentDescription"
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"/>
-
-                    <TextView
-                        android:id="@+id/textLocation"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        tools:text="Main Stage"
-                        android:layout_marginStart="16dp"
-                        app:layout_constraintLeft_toRightOf="@+id/imageSessionLocation"
-                        app:layout_constraintTop_toTopOf="@+id/imageSessionLocation"
-                        app:layout_constraintBottom_toBottomOf="@+id/imageSessionLocation"/>
-
-
-
-                </android.support.constraint.ConstraintLayout>
-
-                <!--<android.support.v7.widget.RecyclerView-->
-                    <!--android:id="@+id/speakerList"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginStart="20dp"-->
-                    <!--android:layout_marginLeft="20dp"-->
-                    <!--android:layout_marginTop="16dp"-->
-                    <!--android:layout_marginBottom="16dp"-->
-                    <!--android:layout_marginEnd="20dp"-->
-                    <!--android:layout_marginRight="20dp"/>-->
-
-            </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
-    </android.support.design.widget.CoordinatorLayout>
+      </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+  </android.support.design.widget.CoordinatorLayout>
 </layout>
