--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="tag_default">#D3D3D3</color>
+    <color name="tag_default">#c1c0c0</color>
     <color name="tag_default_dark">#8b8a8a</color>
     <color name="tag_default_overlay">#CAD3D3D3</color>
     <color name="tag_android">#A4C639</color>
